added progress page, swapped out some graphics

--- a/index.html
+++ b/index.html
@@ -77,11 +77,16 @@
 		<div class="row">
 			<div class="six columns" style="margin-top: 20px">
 				<p>This dashboard was created by <a href="http://communityscale.io">CommunityScale</a> for the <a href="https://Honolulu.org/project/housing-planning/">County & City of Honolulu</a>. The objective of this dashboard is to outline the plan's objectives and priorities, share key observations and findings about housing, and introduce possible solutions to increase housing production and address affordability challenges.</p>
-				<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Full report</button></a></p>
-				<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Executive summary</button></a></p>
+				<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Executive summary (PDF)</button></a></p>
+				<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Housing needs assessment (PDF)</button></a></p>
+				<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Strategies to increase housing production (PDF)</button></a></p>
+				<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Place-based opportunities analysis (PDF)</button></a></p>
+				<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Assessment of development barriers (PDF)</button></a></p>
+				<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Literature review (PDF)</button></a></p>
+				<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Map atlas (PDF)</button></a></p>
 			</div>
 			<div class="six columns" style="margin-top:20px">
-				<p><img src="./images/simpelblob.png" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>	
+				<p><img src="./images/Honolulu Comprehensive Housing Plan - Document - Internal.jpg" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>	
 			</div>
 		</div>
 		<!-- Hide the TOC
@@ -146,7 +151,13 @@
 			</div>
 		</div>
 	</div>
-
+	<div class="container">
+		<div class="row">
+			<div class="twelve columns" style="margin-top: 2%">
+				<p><img src="./images/indicators2.png" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>	
+			</div>
+		</div>
+	</div>
 	<!-- Indicators Divider row -->
 	<div class="divider">
 		<div class="container">
@@ -319,8 +330,13 @@
 			</div>
 		</div>
 	</div>
-
-
+	<div>
+		<div class="container">
+			<div class="row">
+		<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Housing needs assessment (PDF)</button></a></p>
+			</div>
+		</div>	
+	</div>
 	<!-- Divider row -->
 	<div class="divider">
 		<div class="container">
@@ -366,7 +382,13 @@
 			</div>
 		</div>
 	</div>
-
+	<div>
+		<div class="container">
+			<div class="row">
+		<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Strategies supporting document (PDF)</button></a></p>
+			</div>
+		</div>	
+	</div>
 	<!-- Divider row -->
 	<div class="divider">
 		<div class="container">
@@ -417,7 +439,6 @@
 				<h5>Use the map below to explore opportunities for added housing capacity.</h5>
 				<style>.embed-container {position: relative; padding-bottom: 40%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style><div class="embed-container"><iframe width="1000" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Honolulu capacity - v1" src="//communityscale.maps.arcgis.com/apps/Embed/index.html?webmap=4adda232d3f74b0f9fc181501d05192b&extent=-158.0915,21.287,-157.6898,21.5168&zoom=true&previewImage=false&scale=true&legendlayers=true&show_panel=true&disable_scroll=true&theme=light"></iframe></div>		</div>
 	</div>	
-
 
 	<div class="row">
 		<hr>
