--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
 		<div class="row">
 			<div class="six columns" style="margin-top: 20px">
 				<p>This dashboard was created by <a href="http://communityscale.io">CommunityScale</a> for the <a href="https://Honolulu.org/project/housing-planning/">County & City of Honolulu</a>. The objective of this dashboard is to outline the plan's objectives and priorities, share key observations and findings about housing, and introduce possible solutions to increase housing production and address affordability challenges.</p>
-				<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Executive summary (PDF)</button></a></p>
-				<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Housing needs assessment (PDF)</button></a></p>
-				<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Strategies to increase housing production (PDF)</button></a></p>
-				<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Place-based opportunities analysis (PDF)</button></a></p>
-				<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Assessment of development barriers (PDF)</button></a></p>
-				<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Literature review (PDF)</button></a></p>
-				<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Map atlas (PDF)</button></a></p>
+				<p><a href="" target="blank"><button>Executive summary (PDF)</button></a></p>
+				<p><a href="" target="blank"><button>Housing needs assessment (PDF)</button></a></p>
+				<p><a href="" target="blank"><button>Strategies to increase housing production (PDF)</button></a></p>
+				<p><a href="" target="blank"><button>Place-based opportunities analysis (PDF)</button></a></p>
+				<p><a href="" target="blank"><button>Assessment of development barriers (PDF)</button></a></p>
+				<p><a href="" target="blank"><button>Literature review (PDF)</button></a></p>
+				<p><a href="" target="blank"><button>Map atlas (PDF)</button></a></p>
 			</div>
 			<div class="six columns" style="margin-top:20px">
 				<p><img src="./images/Honolulu Comprehensive Housing Plan - Document - Internal.jpg" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>	
@@ -392,7 +392,7 @@
 	<div>
 		<div class="container">
 			<div class="row">
-		<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Housing needs assessment (PDF)</button></a></p>
+		<p><a href="" target="blank"><button>Housing needs assessment (PDF)</button></a></p>
 			</div>
 		</div>	
 	</div>
@@ -444,7 +444,7 @@
 	<div>
 		<div class="container">
 			<div class="row">
-		<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Strategies supporting document (PDF)</button></a></p>
+		<p><a href="" target="blank"><button>Strategies supporting document (PDF)</button></a></p>
 			</div>
 		</div>	
 	</div>
