--- a/index-template.html
+++ b/index-template.html
@@ -71,9 +71,8 @@
 		</div>
 		<div id="targetDiv" class="">
 			<a href="#Overview">Back to top</a>
-			<a href="#People">People</a>
-			<a href="#Place"> Place </a>
-			<a href="#Demand">Demand</a>
+			<a href="#Takeaways">Key takeaways</a>
+			<a href="#Strategies">Strategies</a>
 		</div>
 	</div>
   </div>
@@ -221,7 +220,7 @@
 		</div>
 		<div class="row insight">
 			<div class="six columns" style="margin-top: 2%">
-				<h2>Access the full Comprehensive Housing Plan.</h2>
+				<h2>Access the full Comprehensive Housing Plan:</h2>
 				<p>The sections below summarize the Plan's key analytical findings and policy recommendations. The links at right lead to the full set of reports and documents comprising the plan.</p>
 			</div>
 			<div class="six columns" style="margin-top: 2%">
@@ -242,7 +241,7 @@
 			<div class="twelve columns center-align">
 				<div class="divider-header">
 					<div class="divider-icon">
-						<img src="images/theme/People.svg" class="inline-image" title="Takeaways">
+						<img src="images/theme/Clipboard.svg" class="inline-image" title="Takeaways">
 					</div>
 					<h2 class="inline-text">Key takeaways</h2>
 				</div>
@@ -305,14 +304,14 @@
 				<p>Job access is a key consideration in determining where to prioritize housing development.</p>
 			</div>
 			<div class="six columns" style="margin-top: 2%">
-				<img src="images/charts/honjobsfordash.png" height="auto" width="100%" title="CommunityScale" alt="CommunityScale">
+				<a href="images/charts/honjobsfordash.png"><img src="images/charts/honjobsfordash.png" height="auto" width="100%" title="CommunityScale" alt="CommunityScale"></a>
 				<figcaption>Each employment sector has its own clusters, though while some sectors are largely concentrated around institutions (such as "eds","meds", and public sector roles), service sector job clusters are more scattered. However, all of Honolulu's 9 districts contain significant employment centers including one or more sectors.</figcaption>
 			</div>
 		</div>
 		<div class="row insight">
 			<div class="six columns" style="margin-top: 2%">
 				<h4>Much of Honolulu's workforce earns 80-140% AMI.</h4>
-				<p>Many of the occupations comprising the foundation of the economy pay wages that equate to household incomes between 80-140% of AMI. This ranges from a single-earner household making $??? (80% AMI for a 2-person household) to a dual-earner household making $???. Honolulu caps incomes eligible for affordable housing designation at 120% AMI, excluding many dual-earner workforce households.</p>
+				<p>Many of the occupations comprising the foundation of the economy pay wages that equate to household incomes between 80-140% of AMI. This ranges from a single-earner household making $89,100 (80% AMI for a 2-person household) to a dual-earner household making $175,400 (140% AMI for a 3-person household). Honolulu caps incomes eligible for affordable housing designation at 120% AMI, excluding many dual-earner working class households.</p>
 			</div>
 			<div class="six columns" style="margin-top: 2%">
 				<iframe title="" aria-label="Range Plot" id="datawrapper-chart-TDGRK" src="https://datawrapper.dwcdn.net/TDGRK/5/" scrolling="no" frameborder="0" style="border: none;" width="100%" height="348" data-external="1"></iframe>
@@ -360,7 +359,7 @@
 			<div class="twelve columns center-align">
 				<div class="divider-header">
 					<div class="divider-icon">
-						<img src="images/theme/People.svg" class="inline-image" title="Takeaways">
+						<img src="images/theme/Results.svg" class="inline-image" title="Takeaways">
 					</div>
 					<h2 class="inline-text">Strategies</h2>
 				</div>
@@ -458,7 +457,8 @@
 		</div>
 		<div class="row insight">
 			<div class="twelve columns" style="margin-top: 2%">
-				<h5>Use the map below to explore opportunities for added housing capacity:</h5>
+				<h4>Explore areas with capacity for more housing.</h4>
+				<p>The interactive map below indicates areas in Honolulu with the potential for additional housing capacity, such as through ADU construction and zoning changes to allow residential in B1 and B2.</p>
 				<style>.embed-container {position: relative; padding-bottom: 40%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style><div class="embed-container"><iframe width="1000" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Honolulu capacity - v1" src="//communityscale.maps.arcgis.com/apps/Embed/index.html?webmap=4adda232d3f74b0f9fc181501d05192b&extent=-158.0915,21.287,-157.6898,21.5168&zoom=true&previewImage=false&scale=true&legendlayers=true&show_panel=true&disable_scroll=true&theme=light"></iframe></div>
 			</div>
 		</div>	
@@ -466,6 +466,21 @@
 			<div class="twelve columns center-align" style="margin-top: 2%">
 				<p>Read the full report:</p>
 				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank"><button>📄 Place-based Opportunities Analysis</button></a></p>
+			</div>
+		</div>
+		<div class="row insight">
+			<div class="six columns" style="margin-top: 2%">
+				<h2>Access the full Comprehensive Housing Plan:</h2>
+				<p>Thank you for reading this online summary of the Comprehensive Housing Plan. The links at right lead to the full set of reports and documents comprising the plan for further reading and reference.</p>
+			</div>
+			<div class="six columns" style="margin-top: 2%">
+				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank">📄 Executive summary</a></p>
+				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank">📄 Housing needs assessment</a></p>
+				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank">📄 Affordable housing development barriers assessment</a></p>
+				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank">📄 Strategies to increase housing production</a></p>
+				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank">📄 Place-based opportunities and constraints</a></p>
+				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank">📄 Literature review</a></p>
+				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank">📄 Map atlas</a></p>
 			</div>
 		</div>
 	</div>
