--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+	
+<!-- Google tag (gtag.js) for github dashboards -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-56575F4C50"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-56575F4C50');
+</script>
 
 	<!-- Metadata 2024 -->
 	<meta charset="utf-8">
