--- a/index.html
+++ b/index.html
@@ -72,20 +72,30 @@
 				<img src="images/client/client-logo.png" alt="Honolulu" class="inline-logo">
 				<span class="title">Comprehensive Housing Plan</span>
 			</p>
-			<div id="clickDiv">
-				<a class="menu-icon">
-					<i class="fa fa-bars"></i>
-				  </a>
-			</div>
+			<div class="nav-options">
+				<div class="desktop-pages">
+					<!-- Links must be added here for desktop -->
+					<a href="#Overview">Back to top</a>
+					<a href="#Takeaways">Key takeaways</a>
+					<a href="#Strategies">Strategies</a>
+				</div>
+				<div id="clickDiv" class="mobile-menu-icon">
+					<a class="menu-icon">
+						<i class="fa fa-bars"></i>
+					  </a>
+				</div>
+			</div>				
 		</div>
 		<div id="targetDiv" class="">
+			<!-- Links must be added here again for mobile -->
 			<a href="#Overview">Back to top</a>
 			<a href="#Takeaways">Key takeaways</a>
 			<a href="#Strategies">Strategies</a>
 		</div>
 	</div>
-  </div>
-
+</div>
+			
+  	<!-- dont need this anymore?
 	<script>
 		const clickDiv = document.getElementById("clickDiv");
 		const targetDiv = document.getElementById("targetDiv");
@@ -128,7 +138,8 @@
 			}
 		});
 	</script>
-  
+	-->
+
 	<!-- Cover banner -->
 
 	<div id="Overview" class="cover">
