--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 			</div>
 			<div class="six columns" style="margin-top: 2%">
 				<iframe title="" aria-label="Interactive area chart" id="datawrapper-chart-w85On" src="https://datawrapper.dwcdn.net/w85On/5/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="389" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();</script>
-				<img src="images/amitable.png" height="auto" width="100%" title="CommunityScale" alt="CommunityScale">
+				<img src="images/charts/amitable.png" height="auto" width="100%" title="CommunityScale" alt="CommunityScale">
 				<figcaption>Top chart: Households by income group.</figcaption>
 				<figcaption>Bottom table: Net new households by income group in 5 years</figcaption>
 				<figcaption>For reference, Honolulu’s median income (HUD) 2024: $120,100.</figcaption>
