--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
 		<div class="container">
 			<div class="unresponsive" style="margin-bottom: 30px;">
 				<img src="./images/client/client-logo.png" height="auto" width="30px" title="Honolulu" alt="Honolulu">
-				<p><a href="https://Honolulu-ma.gov/departments/community_and_economic_development/index.php">Honolulu's Community and Economic Development Department</a> works to improve the quality of life for all in Honolulu by supporting the development of business, housing, and community.</p>
+				<p><a href="https://www8.honolulu.gov/housing/">Honolulu's Office of Housing</a> drives policy and strategy for housing islandwide to stimulate the acquisition, development, and preservation of housing for all of Oahu’s residents.</p>
 			</div>
 	
 			<div class="unresponsive">
