--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 					<p>The Comprehensive Housing Plan builds on the the Office of Housing’s 2023 Housing Plan with extensive data analysis, stakeholder engagement, policy review, and actionable recommendations to help the City and County of Honolulu achieve its housing goals through 2029 and beyond.</p>
 					<p>This plan is intended to help stakeholders and residents understand the details and nuances of the city’s housing challenge, coordinating with other City departments and governing datasets and metrics to provide a strategic roadmap to unlock opportunities for expanded housing production across the spectrum of affordability - and especially among income levels that have been underserved by current policies and market activity.</p>
 					<p>This website version of the plan highlights key observations and findings. The Plan's Executive Summary is available here, including links to supporting reports from the Comprehensive Housing Plan:</p>
-					<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank"><button>📄 Executive Summary</button></a></p>
+					<p><a href="https://docs.google.com/presentation/d/1tP5XDvnDlRzorfSavvwvof4GgTNCF4b3b7MnhsIHB6s/edit?usp=drive_link" target="blank"><button>📄 Executive Summary</button></a></p>
 				</div>
 			</div>
 		</div>
@@ -369,7 +369,7 @@
 		<div class="row section">
 			<div class="twelve columns center-align" style="margin-top: 2%">
 				<p>Read the full report:</p>
-				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank"><button>📄 Housing Needs Assessment</button></a></p>
+				<p><a href="https://docs.google.com/presentation/d/15O-XibjwNONQ4JKKGmFwQjzOxrQv72Q9gMei2wHWDyU/edit?usp=drive_link" target="blank"><button>📄 Housing Needs Assessment</button></a></p>
 			</div>
 		</div>
 	</div>
@@ -441,7 +441,7 @@
 		<div class="row section">
 			<div class="twelve columns center-align" style="margin-top: 2%">
 				<p>Read the full report:</p>
-				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank"><button>📄 Strategies to Improve Housing Production</button></a></p>
+				<p><a href="https://docs.google.com/presentation/d/1_2W-24EMyxV9MmpBXMtHhvo36ZCZfgATNW696n_JO_0/edit?usp=drive_link" target="blank"><button>📄 Strategies to Improve Housing Production</button></a></p>
 			</div>
 		</div>
 		<div class="row section">
@@ -485,7 +485,7 @@
 		<div class="row section">
 			<div class="twelve columns center-align" style="margin-top: 2%">
 				<p>Read the full report:</p>
-				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank"><button>📄 Place-based Opportunities Analysis</button></a></p>
+				<p><a href="https://docs.google.com/presentation/d/1IPB97RXOvNAULMOPFaRswtja5IdK7VAD1TQDcSy0TC0/edit?usp=drive_link" target="blank"><button>📄 Place-based Opportunities Analysis</button></a></p>
 			</div>
 		</div>
 		<div class="row insight">
@@ -494,13 +494,13 @@
 				<p>Thank you for reading this online summary of the Comprehensive Housing Plan. The links at right lead to the full set of reports and documents comprising the plan for further reading and reference.</p>
 			</div>
 			<div class="six columns" style="margin-top: 2%">
-				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank">📄 Executive summary</a></p>
-				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank">📄 Housing needs assessment</a></p>
-				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank">📄 Affordable housing development barriers assessment</a></p>
-				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank">📄 Strategies to increase housing production</a></p>
-				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank">📄 Place-based opportunities and constraints</a></p>
-				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank">📄 Literature review</a></p>
-				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank">📄 Map atlas</a></p>
+				<p><a href="https://docs.google.com/presentation/d/1tP5XDvnDlRzorfSavvwvof4GgTNCF4b3b7MnhsIHB6s/edit?usp=drive_link" target="blank">📄 Executive summary</a></p>
+				<p><a href="https://docs.google.com/presentation/d/15O-XibjwNONQ4JKKGmFwQjzOxrQv72Q9gMei2wHWDyU/edit?usp=drive_link" target="blank">📄 Housing needs assessment</a></p>
+				<p><a href="https://docs.google.com/presentation/d/1gv3yHMZCvMVq0dfUnTQpqSKZhS-vU4aa_7xVN5oxPVU/edit?usp=drive_link" target="blank">📄 Affordable housing development barriers assessment</a></p>
+				<p><a href="https://docs.google.com/presentation/d/1_2W-24EMyxV9MmpBXMtHhvo36ZCZfgATNW696n_JO_0/edit?usp=drive_link" target="blank">📄 Strategies to increase housing production</a></p>
+				<p><a href="https://docs.google.com/presentation/d/1IPB97RXOvNAULMOPFaRswtja5IdK7VAD1TQDcSy0TC0/edit?usp=drive_link" target="blank">📄 Place-based opportunities and constraints</a></p>
+				<p><a href="https://docs.google.com/presentation/d/1xE2GztGl8iJy7BzaEKI5vu2qwgpYbJXsacTmk1Bd9MU/edit?usp=drive_link" target="blank">📄 Literature review</a></p>
+				<p><a href="https://docs.google.com/presentation/d/1rg1KW9unizyJFKDLRR0llLGvIIKkRx-QgN7wBdPIywo/edit?usp=drive_link" target="blank">📄 Map atlas</a></p>
 			</div>
 		</div>
 	</div>
