--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 	<div id="Overview" class="cover">
 		<div class="container" style="margin-top: 0">
-			<h1>City and Couty of Honolulu
+			<h1>City and County of Honolulu
 				<br>Comprehensive Housing Plan
 			</h1>
 			
@@ -169,7 +169,7 @@
 				<div class="six columns" style="margin-top: 2%">
 					<h4>The purpose of this plan</h4>
 					<p>The Comprehensive Housing Plan builds on the the Office of Housing’s 2023 Housing Plan with extensive data analysis, stakeholder engagement, policy review, and actionable recommendations to help the City and County of Honolulu achieve its housing goals through 2029 and beyond.</p>
-					<p>This plan is intended to help stakeholders and residents understand the details and nuances of the city’s housing challenge, coordinating with other City departments and governing datasets and metrics to provide a strategic roadmap to unlock opportunities for expanded housing production across the spectrum of affordability - and especially among income levels that have been underserved by current policies and market activity.</p>
+					<p>This plan is intended to help stakeholders and residents understand the details and nuances of the City’s housing challenge, coordinating with other City departments and governing datasets and metrics to provide a strategic roadmap to unlock opportunities for expanded housing production across the spectrum of affordability - and especially among income levels that have been underserved by current policies and market activity.</p>
 					<p>This website version of the plan highlights key observations and findings. The Plan's Executive Summary is available here, including links to supporting reports from the Comprehensive Housing Plan:</p>
 					<p><a href="https://docs.google.com/presentation/d/1tP5XDvnDlRzorfSavvwvof4GgTNCF4b3b7MnhsIHB6s/edit?usp=drive_link" target="blank"><button>📄 Executive Summary</button></a></p>
 				</div>
@@ -191,12 +191,12 @@
 					<div class="box">
 						<p class="large-emoji">⚠️</p>
 						<p class="large-number">38%</p>
-						<p>Cost-burdened houeholds</p>
+						<p>Cost-burdened households</p>
 					</div>
 					<div class="box">
 						<p class="large-emoji">🏠</p>
 						<p class="large-number">$1.07M</p>
-						<p>Median single-family price</p>
+						<p>Median single-family home price</p>
 					</div>
 					<div class="box">
 						<p class="large-emoji">🏢</p>
@@ -218,7 +218,7 @@
 		<div class="row insight">
 			<div class="six columns" style="margin-top: 2%">
 				<h2>The challenge</h2>
-				<h6>The shortage of affordable housing on O'ahu is a long-standing, complex issue that the city has faced for decades.</h6>
+				<h6>The shortage of affordable housing on O'ahu is a long-standing, complex issue that the City has faced for decades.</h6>
 				<p>The lack of housing impacts us as a community. Increasing the supply of housing for all income levels must be considered, as a continuum of need exists, ranging from homeless shelters and permanent supportive housing, to low-income rentals, workforce housing, and single-family homes and condos for those pursuing the American dream of homeownership.</p>
 			</div>
 			<div class="six columns" style="margin-top: 2%">
@@ -244,13 +244,13 @@
 				<p>The sections below summarize the Plan's key analytical findings and policy recommendations. The links at right lead to the full set of reports and documents comprising the plan.</p>
 			</div>
 			<div class="six columns" style="margin-top: 2%">
-				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank">📄 Executive summary</a></p>
-				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank">📄 Housing needs assessment</a></p>
-				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank">📄 Affordable housing development barriers assessment</a></p>
-				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank">📄 Strategies to increase housing production</a></p>
-				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank">📄 Place-based opportunities and constraints</a></p>
-				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank">📄 Literature review</a></p>
-				<p><a href="https://docs.google.com/presentation/d/1RgziR0sq0CrdSUhm9lWpNB4xV_gJkDU1canw5z0JRwE/edit?usp=sharing" target="blank">📄 Map atlas</a></p>
+				<p><a href="https://docs.google.com/presentation/d/1tP5XDvnDlRzorfSavvwvof4GgTNCF4b3b7MnhsIHB6s/edit?usp=drive_link" target="blank">📄 Executive summary</a></p>
+				<p><a href="https://docs.google.com/presentation/d/15O-XibjwNONQ4JKKGmFwQjzOxrQv72Q9gMei2wHWDyU/edit?usp=drive_link" target="blank">📄 Housing needs assessment</a></p>
+				<p><a href="https://docs.google.com/presentation/d/1gv3yHMZCvMVq0dfUnTQpqSKZhS-vU4aa_7xVN5oxPVU/edit?usp=drive_link" target="blank">📄 Affordable housing development barriers assessment</a></p>
+				<p><a href="https://docs.google.com/presentation/d/1_2W-24EMyxV9MmpBXMtHhvo36ZCZfgATNW696n_JO_0/edit?usp=drive_link" target="blank">📄 Strategies to increase housing production</a></p>
+				<p><a href="https://docs.google.com/presentation/d/1IPB97RXOvNAULMOPFaRswtja5IdK7VAD1TQDcSy0TC0/edit?usp=drive_link" target="blank">📄 Place-based opportunities and constraints</a></p>
+				<p><a href="https://docs.google.com/presentation/d/1xE2GztGl8iJy7BzaEKI5vu2qwgpYbJXsacTmk1Bd9MU/edit?usp=drive_link" target="blank">📄 Literature review</a></p>
+				<p><a href="https://docs.google.com/presentation/d/1rg1KW9unizyJFKDLRR0llLGvIIKkRx-QgN7wBdPIywo/edit?usp=drive_link" target="blank">📄 Map atlas</a></p>
 			</div>
 		</div>
 	</div>
@@ -325,7 +325,7 @@
 			</div>
 			<div class="six columns" style="margin-top: 2%">
 				<a href="images/charts/honjobsfordash.png"><img src="images/charts/honjobsfordash.png" height="auto" width="100%" title="CommunityScale" alt="CommunityScale"></a>
-				<figcaption>Each employment sector has its own clusters, though while some sectors are largely concentrated around institutions (such as "eds","meds", and public sector roles), service sector job clusters are more scattered. However, all of Honolulu's 9 districts contain significant employment centers including one or more sectors.</figcaption>
+				<figcaption>Each employment sector has its own clusters, though while some sectors are largely concentrated around institutional hubs, service sector job clusters are more scattered. However, all of Honolulu's 9 districts contain significant employment centers including one or more sectors. <i>Click the image to enlarge.</i></figcaption>
 			</div>
 		</div>
 		<div class="row insight">
@@ -359,8 +359,8 @@
 		<div class="row insight" id="Production">
 			<div class="six columns" style="margin-top: 2%">
 				<h4>More 80-140% AMI housing is needed to retain the workforce.</h4>
-				<p>With limited resources at the City’s disposal, it is important to match the current cost burden, expected household growth, and rates of out migration with the correct policy response. The City has many productive programs in place, including upzoning in TOD areas (IPD-T) and allowing residential in business districts and enabling ADUs.</p>			
-				<p>There is a need to adjust policies to promote housing for the workforce between 80-140% AMI, which is the predominant segment for out migration.</p>
+				<p>With limited resources at the City’s disposal, it is important to match the current cost burden, expected household growth, and rates of out migration with the correct policy response.</p>
+				<p>Currently, the development pipeline outpaces projected new demand for &lt;80% AMI housing and falls far short of projected new demand for 80-140% AMI housing (which includes expected growth plus the outmigration likely to occur without sufficient housing supply). While resources should not be diverted from low-income housing, more attention is needed to close the gap at 80-140% AMI.</p>			
 			</div>
 			<div class="six columns" style="margin-top: 2%">
 				<p><img src="./images/charts/incentivizeworkforce.png" height="auto" width="100%" title="CommunityScale" alt="CommunityScale"></p>				
@@ -410,7 +410,7 @@
 				<p><strong>Ensure the availability of housing for residents across the income spectrum.</strong></p>
 				<p><strong>Align infrastructure investment with housing development plans</strong> to make the most effective use of limited infrastructure funding and long implementation timeframes. </p>
 				<p><strong>Recognize the need to balance:</strong></p>
-				<li><strong>The City’s needs for property tax revenues</strong>to sustain vital services (e.g. police, fire, road maintenance, etc.) that benefit the community,</li>
+				<li><strong>The City’s needs for property tax revenues</strong> to sustain vital services (e.g. police, fire, road maintenance, etc.) that benefit the community,</li>
 				<li><strong>The community's need for affordable housing,</strong> and</li>
 				<li><strong>Builders' need for project feasibility.</strong></li>
 			</div>
@@ -462,7 +462,7 @@
 		<div class="row insight" id="TOD">
 			<div class="twelve columns" style="margin-top: 2%">
 				<h4>Housing development should be concentrated within TOD areas.</h4>
-				<p>78% of the 5-year growth is allocated to the three sustainable area plans containing the transit-oriented development areas, while the remaining 22% is allocated to the more rural sustainable communities with an eye of smaller scale infill housing, retrofits and replacement, and supporting the workforce.</p>
+				<p>78% of the 5-year growth is allocated to the three sustainable area plans containing the transit-oriented development areas, while the remaining 22% is allocated to the more rural sustainable communities with an eye on smaller scale infill housing, retrofits and replacement, and supporting the workforce.</p>
 				<p><img src="./images/charts/blobdiagram.png" height="auto" width="100%" title="CommunityScale" alt="CommunityScale"></p>				
 			</div>
 		</div>
