--- a/index.html
+++ b/index.html
@@ -389,6 +389,7 @@
 					<a href="#Policies"><button  class="button-primary">Policies</button></a>
 					<a href="#Development"><button  class="button-primary">Development</button></a>
 					<a href="#TOD"><button  class="button-primary">TOD</button></a>
+					<a href="#Map"><button  class="button-primary">Interactive map</button></a>
 				</div>
 			</div>
 		</div>
@@ -475,7 +476,7 @@
 				<p><img src="./images/charts/todcapacity.png" height="auto" width="100%" title="CommunityScale" alt="CommunityScale"></p>				
 			</div>
 		</div>
-		<div class="row insight">
+		<div class="row insight" id="Map">
 			<div class="twelve columns" style="margin-top: 2%">
 				<h4>Explore areas with capacity for more housing.</h4>
 				<p>The interactive map below indicates areas in Honolulu with the potential for additional housing capacity, such as through ADU construction and zoning changes to allow residential in B1 and B2.</p>
