--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 
 <head>
 	
-<!-- Google tag (gtag.js) for github dashboards -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-56575F4C50"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P6VL31J38D"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-56575F4C50');
+
+  gtag('config', 'G-P6VL31J38D');
 </script>
 
 	<!-- Metadata 2024 -->
