--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 				</div>
 				<div class="six columns" style="margin-top: 2%">
 					<h4>The purpose of this plan</h4>
-					<p>The Comprehensive Housing Plan builds on the the Office of Housing’s 2023 Housing Plan with extensive data analysis, stakeholder engagement, policy review, and actionable recommendations to help the City and County of Honolulu achieve its housing goals through 2029 and beyond.</p>
+					<p>The Comprehensive Housing Plan builds on the Office of Housing’s 2023 Housing Plan with extensive data analysis, stakeholder engagement, policy review, and actionable recommendations to help the City and County of Honolulu achieve its housing goals through 2029 and beyond.</p>
 					<p>This plan is intended to help stakeholders and residents understand the details and nuances of the City’s housing challenge, coordinating with other City departments and governing datasets and metrics to provide a strategic roadmap to unlock opportunities for expanded housing production across the spectrum of affordability - and especially among income levels that have been underserved by current policies and market activity.</p>
 					<p>This website version of the plan highlights key observations and findings. The Plan's Executive Summary is available here, including links to supporting reports from the Comprehensive Housing Plan:</p>
 					<p><a href="https://docs.google.com/presentation/d/1tP5XDvnDlRzorfSavvwvof4GgTNCF4b3b7MnhsIHB6s/edit?usp=drive_link" target="blank"><button>📄 Executive Summary</button></a></p>
